Updated to version 1.4.4 from http://www.the-ebook.org/forum/viewtopic.php?p=1278819#1278819.